// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTPInput /> should accept data-analytics attributes 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7.c7.c7.c7.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 0px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c12.c12.c12.c12.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 8px;
}

.c13.c13.c13.c13.c13 {
  margin-left: 0px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.25rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.625rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11.c11.c11.c11.c11::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border-radius: 4px;
  width: 100%;
}

.c9.c9.c9.c9.c9:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="otp-input"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <label
        data-blade-component="form-label"
        for="otp-4399-input-4400"
        style="width: auto; flex-shrink: 0; margin-right: 0px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Enter OTP
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </label>
      <div
        class="c6"
        data-blade-component="base-box"
      >
        <input
          hidden=""
          id="otp-4399-input-4400"
          readonly=""
          value=""
        />
        <div
          class="c7"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label="Enter OTP character 1"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-analytics-event="change"
                    data-analytics-type="otp"
                    data-blade-component="styled-base-input"
                    id="otp-4399-input-4400-0-4405-input-4406"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 2"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-analytics-event="change"
                    data-analytics-type="otp"
                    data-blade-component="styled-base-input"
                    id="otp-4399-input-4400-1-4411-input-4412"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 3"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-analytics-event="change"
                    data-analytics-type="otp"
                    data-blade-component="styled-base-input"
                    id="otp-4399-input-4400-2-4417-input-4418"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 4"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-analytics-event="change"
                    data-analytics-type="otp"
                    data-blade-component="styled-base-input"
                    id="otp-4399-input-4400-3-4423-input-4424"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
      data-blade-component="base-box"
    />
  </div>
</div>
`;

exports[`<OTPInput /> should render 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7.c7.c7.c7.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 0px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c12.c12.c12.c12.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 8px;
}

.c13.c13.c13.c13.c13 {
  margin-left: 0px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.25rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.625rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11.c11.c11.c11.c11::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border-radius: 4px;
  width: 100%;
}

.c9.c9.c9.c9.c9:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="otp-input"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <label
        data-blade-component="form-label"
        for="otp-37-input-38"
        style="width: auto; flex-shrink: 0; margin-right: 0px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Enter OTP
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </label>
      <div
        class="c6"
        data-blade-component="base-box"
      >
        <input
          hidden=""
          id="otp-37-input-38"
          readonly=""
          value=""
        />
        <div
          class="c7"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label="Enter OTP character 1"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-37-input-38-0-49-input-50"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 2"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-37-input-38-1-55-input-56"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 3"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-37-input-38-2-61-input-62"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 4"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-37-input-38-3-67-input-68"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 5"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-37-input-38-4-73-input-74"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 6"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-37-input-38-5-79-input-80"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
      data-blade-component="base-box"
    />
  </div>
</div>
`;

exports[`<OTPInput /> should render large size 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 8px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7.c7.c7.c7.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 0px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c12.c12.c12.c12.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 8px;
}

.c13.c13.c13.c13.c13 {
  margin-left: 0px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.5rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 2rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 48px;
  min-height: 48px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11.c11.c11.c11.c11::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border-radius: 4px;
  width: 100%;
}

.c9.c9.c9.c9.c9:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="otp-input"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <label
        data-blade-component="form-label"
        for="otp-157-input-158"
        style="width: auto; flex-shrink: 0; margin-right: 0px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Enter OTP
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </label>
      <div
        class="c6"
        data-blade-component="base-box"
      >
        <input
          hidden=""
          id="otp-157-input-158"
          readonly=""
          value="1234"
        />
        <div
          class="c7"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label="Enter OTP character 1"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-157-input-158-0-163-input-164"
                    inputmode="decimal"
                    maxlength="1"
                    placeholder=""
                    required=""
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 2"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-157-input-158-1-169-input-170"
                    inputmode="decimal"
                    maxlength="1"
                    placeholder=""
                    required=""
                    type="text"
                    value="2"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 3"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-157-input-158-2-175-input-176"
                    inputmode="decimal"
                    maxlength="1"
                    placeholder=""
                    required=""
                    type="text"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 4"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-157-input-158-3-181-input-182"
                    inputmode="decimal"
                    maxlength="1"
                    placeholder=""
                    required=""
                    type="text"
                    value="4"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 5"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-157-input-158-4-187-input-188"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class=" c9"
                data-blade-component="base-box"
              >
                <div
                  class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1  c10"
                  data-blade-component="base-box"
                >
                  <input
                    aria-describedby=""
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-label=" character 6"
                    aria-required="true"
                    autocomplete="one-time-code"
                    class="c11"
                    data-blade-component="styled-base-input"
                    id="otp-157-input-158-5-193-input-194"
                    inputmode="decimal"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
      data-blade-component="base-box"
    />
  </div>
</div>
`;
